# ConversationLibrary

./: LICENSE  README.md  convoLib.opam  dune-project
lib/: conversations.ts  convoLib.ml  coreLib.ml  dune  jsConvTest.ml  jsonConvGridUI.ml  maybeMnd.ml  ntyGrid.ml  searchUI.ml
test/: dune
